--- a/bacs200/project/page5.html
+++ b/bacs200/project/page5.html
@@ -32,14 +32,16 @@
     <p>
     To stay connected with Wyatt Jordan and see the latest Starwraith material, head over to my social media pages.
     </p>
+    <nav id="socials">
         <ul>
         <li><a href="https://www.linkedin.com/in/wyatt-jordan-031a09166/">Wyatt Jordan LinkedIn</a></li>
         <li><a href="https://www.facebook.com/wyatt.jordan.94">Wyatt Jordan Facebook</a></li>
         <li><a href="https://www.instagram.com/trve_kvlt_party_raptor/">Wyatt Jordan Instagram</a></li>
         <li><a href="https://www.facebook.com/starwraithmetal/">Starwraith Facebook</a></li>
         <li><a href="https://www.instagram.com/starwraith_band/">Starwraith Instagram</a></li>
-         <li><a href="https://linktr.ee/starwraith">Starwraith Linktree</a></li>
+        <li><a href="https://linktr.ee/starwraith">Starwraith Linktree</a></li>
         </ul>
+    </nav>
    
     
    
