--- a/bacs200/project/index.html
+++ b/bacs200/project/index.html
@@ -18,7 +18,7 @@
         <h2>Musician, Composer, and Audio Engineer</h2>
     <nav id="finalmenu">
         <ul>
-        <li><a href="../index.html"> Home </a></li>
+        <li><a href="../index.html"> BACS 200 Home </a></li>
         <li><a href="page2.html"> Portfolio </a></li>
         <li><a href="page3.html"> Music </a></li>
         <li><a href="page4.html"> Videos </a></li>
@@ -37,8 +37,31 @@
     <p> <a href="https://linktr.ee/starwraith"> Click Here!</a></p>
   </div>
 
+</div>        
+</header>
+<div class="col-md-2">
+<div id="carousel1" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="../05/images/me-original.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="images/guitarpic.png" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="images/mixingpic.jpg" class="d-block w-100" alt="...">
+    </div>
+  </div>
 </div>
-         <script
+</div> 
+    
+   
+</body> <script
             // Get the modal
 var modal = document.getElementById("myModal");
 
@@ -64,38 +87,6 @@ window.onclick = function(event) {
   }
 }
 ></script>
-        </header>
-<div class="col-md-2">
-<div id="carousel1" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="../05/images/me-original.jpg" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="images/guitarpic.png" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="images/mixingpic.jpg" class="d-block w-100" alt="...">
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="images/me-original.jpg" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
-</div> 
-    
-   
-</body>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
