--- a/bacs200/project/page5.html
+++ b/bacs200/project/page5.html
@@ -18,7 +18,7 @@
         <h2>Musician, Composer, and Audio Engineer</h2>
     <nav id="finalmenu">
         <ul>
-        <li><a href="../index.html"> BACS200 Home </a></li>
+        <li><a href="index.html">Home </a></li>
         <li><a href="page2.html"> Bio </a></li>
         <li><a href="page3.html"> Music </a></li>
         <li><a href="page4.html"> Videos </a></li>
