--- a/bacs200/project/index.html
+++ b/bacs200/project/index.html
@@ -65,9 +65,12 @@ window.onclick = function(event) {
     <span class="close">&times;</span>
     <p> <a href="https://linktr.ee/starwraith"> Click Here!</a></p>
   </div>
-
 </div>        
 </header>
+    <p>
+    Wyatt Jordan is a Musician, composer, and audio engineer from Greeley Colorado. Services range from recorded guitar parts for any genre, to fully orchestrated film music.
+    </p>
+    
 <div class="col-md-2">
 <div id="carousel1" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
@@ -88,9 +91,7 @@ window.onclick = function(event) {
   </div>
 </div>
 </div> 
- 
-<aside><div id="fb" class="fb-page" data-href="https://www.facebook.com/starwraithmetal/" data-tabs="timeline" data-width="400" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/starwraithmetal/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/starwraithmetal/">Starwraith</a></blockquote></div>
-    </aside>
+<div id="fb" class="fb-page" data-href="https://www.facebook.com/starwraithmetal/" data-tabs="timeline" data-width="400" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/starwraithmetal/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/starwraithmetal/">Starwraith</a></blockquote></div>
 </body>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
