--- a/bacs200/project/index.html
+++ b/bacs200/project/index.html
@@ -12,7 +12,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 </head>
 
-<body><script>
+<body>
+    <script>
 // Get the modal
 var modal = document.getElementById('myModal');
 
