--- a/bacs200/project/page 2-2.html
+++ b/bacs200/project/page 2-2.html
@@ -41,22 +41,22 @@ body {font-family: "Lato", sans-serif}
     <div id="fb-root"></div>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v6.0"></script>
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
-    <h2 class="w3-wide">Music</h2>
-    <p class="w3-opacity"><i>Starwraith</i></p>
-    <p class="w3-justify">Wyatt released a full length album of melodic death metal in June 2019. Stormborn is a great combination of heavy riffs, catchy choruses, and epic orchestrations.
-        
-        to find it on your favorite platform --> <a href="https://linktr.ee/starwraith"> CLICK HERE</a></p>
+    <h2 class="w3-wide">Wyatt Jordan</h2>
+    <p class="w3-opacity"><i>Musician, Audio Engineer, and Composer</i></p>
+    <p class="w3-justify">Wyatt Jordan released a full length ablum of melodic death metal in June 2019. In addition, He has composed scores and music for movies and videogames, including the feature length film, Country Mustard. Wyatt has contributed his guitar playing and technical skills with music production in the studio and live music to several musicians and bands in the Northern Colorado area. Wyatt has worked as a stage hand for large shows, including Post Malone, and Trans Siberian Orchestra. In Addition Wyatt works as a stagehand and guitar technician for Killing Creation, a modern metal band from Denver. </p>
     <div class="w3-row w3-padding-32">
       <div class="w3-third">
         <p></p>
       </div>
-        <p>Starwaith on Spotify</p>
-       <iframe src="https://open.spotify.com/embed/track/4RCil5d9zhESkU5Q8UdeQr" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+        <p>Country Mustard: feature length film score</p>
+       <img src="https://images.squarespace-cdn.com/content/v1/5d8acf8126816d702e617ad5/1569467932149-3SVQML8DAHE7BXTN2QMM/ke17ZwdGBToddI8pDm48kNI0QqBoP1-YZrkjI-B9SbpZw-zPPgdn4jUwVcJE1ZvWQUxwkmyExglNqGp0IvTJZUJFbgE-7XRK3dMEBRBhUpyM_mdbvOEurcfNTTySXQPMSzST0xxNuJrp0mstpE7AuMyvv-gFKO0ei85D68G8QiQ/69300636_102263487815161_3011516967854014464_n.jpg?format=500w" alt="...">
         <p></p>
       </div>
       </div>
       
     </div>
+  </div>
+
   
   <!-- The Contact Section -->
   <div class="w3-container w3-content w3-padding-64" style="max-width:800px" id="contact">
@@ -70,6 +70,7 @@ body {font-family: "Lato", sans-serif}
   </div>
   
 <!-- End Page Content -->
+</div>
 
 <!-- Image of location/map -->
 <img src="/w3images/map.jpg" class="w3-image w3-greyscale-min" style="width:100%">
