--- a/bacs200/project/index.html
+++ b/bacs200/project/index.html
@@ -19,7 +19,7 @@ body {font-family: "Lato", sans-serif}
     <a href="index.html" class="w3-bar-item w3-button w3-padding-large">HOME</a>
     <a href="page2.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">PORTFOLIO</a>
     <a href="page3.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">MUSIC</a>
-    <a href="page4" class="w3-bar-item w3-button w3-padding-large w3-hide-small">VIDEOS</a>
+    <a href="page4.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">VIDEOS</a>
     <a href="page5.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">SOCIALS</a>
           
       </div>
@@ -30,7 +30,7 @@ body {font-family: "Lato", sans-serif}
  <a href="index.html" class="w3-bar-item w3-button w3-padding-large">HOME</a>
     <a href="page2.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">PORTFOLIO</a>
     <a href="page3.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">MUSIC</a>
-    <a href="page4" class="w3-bar-item w3-button w3-padding-large w3-hide-small">VIDEOS</a>
+    <a href="page4.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">VIDEOS</a>
     <a href="page5.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">SOCIALS</a>
 </div>
 
