--- a/bacs200/project/page2.html
+++ b/bacs200/project/page2.html
@@ -19,7 +19,7 @@ body {font-family: "Lato", sans-serif}
     <a href="index.html" class="w3-bar-item w3-button w3-padding-large">HOME</a>
     <a href="page2.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">PORTFOLIO</a>
     <a href="page3.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">MUSIC</a>
-    <a href="page4" class="w3-bar-item w3-button w3-padding-large w3-hide-small">VIDEOS</a>
+    <a href="page4.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">VIDEOS</a>
     <a href="page5.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">SOCIALS</a>
           
       </div>
@@ -43,7 +43,7 @@ body {font-family: "Lato", sans-serif}
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
     <h2 class="w3-wide">Portfolio</h2>
     <p class="w3-opacity"><i>Musician, Audio Engineer, and Composer</i></p>
-    <p class="w3-justify">Wyatt Jordan released a full length ablum of melodic death metal in June 2019. In addition, He has composed scores and music for movies and videogames, including the feature length film, Country Mustard. Wyatt has contributed his guitar playing and technical skills with music production in the studio and live music to several musicians and bands in the Northern Colorado area. Wyatt has worked as a stage hand for large shows, including Post Malone, and Trans Siberian Orchestra. In Addition Wyatt works as a stagehand and guitar technician for Killing Creation, a modern metal band from Denver. </p>
+    <p class="w3-justify">Wyatt Jordan released a full length ablum of melodic death metal in June 2019. In addition, he has composed scores and music for movies and videogames, including the feature length film, Country Mustard. Wyatt has contributed his guitar playing and technical skills with music production in the studio and live music to several musicians and bands in the Northern Colorado area. Wyatt has worked as a stage hand for large shows, including Post Malone, and Trans Siberian Orchestra. In Addition Wyatt works as a stagehand and guitar technician for Killing Creation, a modern metal band from Denver. </p>
     <div class="w3-row w3-padding-32">
       <div class="w3-third">
         <p></p>
